--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.7.2",
