--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "twilio": "^4.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
